Remove wildcard import